--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -27,4 +27,6 @@ optional_scopes = [ ]
 use_legacy_install_flow = false
 
 [auth]
-redirect_urls = [ ]
+redirect_urls = [ 
+  "https://ai-review-generator-1.onrender.com/"
+]
