--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -22,11 +22,11 @@ api_version = "2026-01"
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = ""
+scopes = "read_products"
 optional_scopes = [ ]
 use_legacy_install_flow = false
 
 [auth]
 redirect_urls = [ 
-  "https://ai-review-generator-1.onrender.com/"
+  "https://ai-review-generator-1.onrender.com/auth/callback"
 ]
